--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "core-js": "^3.26.1"
+    "core-js": "^3.26.1",
+    "dat.gui": "^0.7.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
@@ -20,7 +21,7 @@
   "name": "standart-anime-gen",
   "version": "1.0.0",
   "main": "script.js",
-	"scripts": {
+  "scripts": {
     "build": "webpack --mode production",
     "dev": "webpack serve"
   },
