--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.2",
     "cssnano": "^5.1.14",
+    "gh-pages": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.0",
     "postcss-loader": "^7.0.1",
@@ -24,7 +25,9 @@
   "main": "script.js",
   "scripts": {
     "build": "webpack --mode production",
-    "dev": "webpack serve"
+    "dev": "webpack serve",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -39,4 +42,3 @@
   "homepage": "https://github.com/AlexeyGamovWVS/fade-animations#readme",
   "description": ""
 }
-
